# swin-transformer-classification

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
.brv/: _queue_status.json  config.json  dream-state.json
.brv/context-tree/: _index.md  _manifest.json
.brv/context-tree/project_overview/: _index.md  context.md
.brv/dream-log/: drm-1778146529021.json
docs/superpowers/plans/: 2026-05-07-phase2-data-understanding.md  2026-05-07-phases-3-4-5-foodnet-package.md
docs/superpowers/specs/: 2026-05-07-phase2-data-understanding-decision.md  2026-05-07-phase2-data-understanding-design.md  (+2 more)
foodnet/cli/: analyze.py  evaluate.py  split.py  train.py
foodnet/data/: dataset.py  mixup.py  splits.py  transforms.py
foodnet/eval/: calibration.py  confusion.py  metrics.py  runner.py  slices.py
foodnet/models/: factory.py  llrd.py
foodnet/splitting/: stratified.py
foodnet/training/: checkpoint.py  early_stop.py  loop.py  optim.py
foodnet/utils/: config_dump.py  paths.py  seed.py  wandb_logger.py
notebooks/: phase2_data_understanding.ipynb  phases_3_4_5_pipeline.ipynb
scripts/: build_phase345_notebook.py
splits/: test.csv  train.csv  val.csv
tests/: conftest.py  test_calibration.py  test_checkpoint.py  test_cli_analyze.py  test_cli_evaluate.py  test_cli_split.py  test_cli_train.py  test_confusion.py  test_dataset.py  test_early_stop.py  test_factory.py  test_llrd.py  test_loop.py  test_metrics.py  test_mixup.py  test_optim.py  test_runner.py  test_slices.py  test_splits_loader.py  test_stratified.py  test_transforms.py
(+45 files in other folders)
